[package]
name = "liblink"
version = "0.1.0"
authors = ["Andreas Bank <andreas.mikael.bank@gmail.com>"]
edition = "2021"

[profile.release]
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive"] }
debug_print = "1.0.0"
once_cell = "1.19.0"

[[bin]]
name = "liblink"
path = "src/server/main.rs"

[[bin]]
name = "link_client"
path = "src/client/main.rs"
